--- a/SettingsWindow.xaml
+++ b/SettingsWindow.xaml
@@ -1,11 +1,11 @@
 ﻿<Window x:Class="ExcelApplication1.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="券设置" Height="399" Width="372" WindowStartupLocation="CenterOwner" ShowInTaskbar="False" WindowStyle="ToolWindow" IsManipulationEnabled="False" Closing="Window_Closing" Topmost="True" Loaded="Window_Loaded">
-    <Grid ShowGridLines="False" Height="340" Width="347">
+        Title="券设置" Height="399" Width="476.909" WindowStartupLocation="CenterOwner" ShowInTaskbar="False" WindowStyle="ToolWindow" IsManipulationEnabled="False" Closing="Window_Closing" Topmost="True" Loaded="Window_Loaded">
+    <Grid ShowGridLines="False" Margin="34,18,23,16">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="87*" />
-            <ColumnDefinition Width="191*" />
+            <ColumnDefinition Width="19*" />
+            <ColumnDefinition Width="84*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="16*" />
@@ -18,22 +18,22 @@
             <RowDefinition Height="39" />
             <RowDefinition Height="67*" />
         </Grid.RowDefinitions>
-        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,8,0,0" Name="textBlock1" Text="活动ID：" VerticalAlignment="Top" TextAlignment="Left" Grid.Row="6" />
-        <TextBox Grid.Column="1" Height="23" HorizontalAlignment="Stretch" Margin="37,9,38,0" Name="txtActivityId" VerticalAlignment="Top" HorizontalScrollBarVisibility="Hidden" Width="163" VerticalContentAlignment="Center" Grid.Row="6" />
-        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,15,0,0" Name="textBlock2" Text="奖品ID：" VerticalAlignment="Top" Grid.Row="1" />
-        <TextBox Grid.Column="1" Height="23" HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Hidden" Margin="15,7,13,0" Name="txtPrizeId" VerticalAlignment="Top" Width="163" Grid.Row="1" VerticalContentAlignment="Center" />
-        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,9,0,0" Name="textBlock3" Text="是否使用：" VerticalAlignment="Top" Grid.Row="2" />
-        <Button Content="确认&amp;关闭" Grid.Column="1" Grid.Row="8" Height="23" HorizontalAlignment="Left" Margin="103,29,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
-        <CheckBox Content="已使用" Grid.Column="1" Grid.Row="2" Height="16" HorizontalAlignment="Left" Margin="42,11,0,0" Name="chkIsUsed" VerticalAlignment="Top" Width="162" />
-        <TextBlock Height="23" HorizontalAlignment="Left" Margin="1,6,0,0" Name="textBlock5" Text="保存文件路径：" VerticalAlignment="Top" Grid.Row="7" />
-        <TextBlock Height="23" HorizontalAlignment="Left" Margin="38,3,0,0" Name="txtTargetPath" Text="" VerticalAlignment="Top" Grid.Column="1" Grid.Row="7" Width="141" />
-        <Button Content="..." Grid.Column="1" Grid.Row="7" Height="23" HorizontalAlignment="Left" Margin="183,4,0,0" Name="button2" VerticalAlignment="Top" Width="25" Click="button2_Click" />
-        <Button Content="取消" Height="23" HorizontalAlignment="Left" Margin="15,29,0,0" Name="button3" VerticalAlignment="Top" Width="75" Grid.Column="1" Grid.Row="8" Click="button3_Click" />
-        <TextBlock Height="23" HorizontalAlignment="Left" Margin="4,3,0,0" Name="textBlock4" Text="活动编号：" VerticalAlignment="Top" Grid.Row="5" />
-        <TextBox Grid.Column="1" Height="23" HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Hidden" Margin="38,4,39,0" Name="txtPrjcode" VerticalAlignment="Top" VerticalContentAlignment="Center" Width="163" Grid.Row="5" />
-        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,13,0,0" Name="textBlock6" Text="开始时间：" VerticalAlignment="Top" Grid.Row="3" />
-        <TextBlock Height="23" HorizontalAlignment="Left" Margin="4,8,0,0" Name="textBlock7" Text="结束时间：" VerticalAlignment="Top" Grid.Row="4" />
-        <TextBox Height="23" HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Hidden" Margin="38,9,37,0" Name="txtStartTime" VerticalAlignment="Top" VerticalContentAlignment="Center" Width="163" Grid.Column="1" Grid.Row="3" />
-        <TextBox Height="23" HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Hidden" Margin="39,4,36,0" Name="txtEndTime" VerticalAlignment="Top" VerticalContentAlignment="Center" Width="163" Grid.Column="1" Grid.Row="4" />
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,8,0,0" Name="textBlock1" Text="活动ID：" VerticalAlignment="Top" TextAlignment="Left" Grid.Row="6" Width="49" />
+        <TextBox Grid.Column="1" Height="23" HorizontalAlignment="Stretch" Margin="15,9,10,0" Name="txtActivityId" VerticalAlignment="Top" HorizontalScrollBarVisibility="Hidden" VerticalContentAlignment="Center" Grid.Row="6" />
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,15,0,0" Name="textBlock2" Text="奖品ID：" VerticalAlignment="Top" Grid.Row="1" Width="49" />
+        <TextBox Grid.Column="1" Height="23" HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Hidden" Margin="15,7,10,0" Name="txtPrizeId" VerticalAlignment="Top" Grid.Row="1" VerticalContentAlignment="Center" />
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,9,0,0" Name="textBlock3" Text="是否使用：" VerticalAlignment="Top" Grid.Row="2" Width="60" />
+        <Button Content="确认&amp;关闭" Grid.Column="1" Grid.Row="8" Height="23" HorizontalAlignment="Left" Margin="199,29,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
+        <CheckBox Content="已使用" Grid.Column="1" Grid.Row="2" Height="23" HorizontalAlignment="Left" Margin="15,11,0,0" Name="chkIsUsed" VerticalAlignment="Top" Width="258" Grid.RowSpan="2" />
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="1,6,0,0" Name="textBlock5" Text="保存文件路径：" VerticalAlignment="Top" Grid.Row="7" Grid.ColumnSpan="2" Width="84" />
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="15,7,0,0" Name="txtTargetPath" Text="" VerticalAlignment="Top" Grid.Column="1" Grid.Row="7" Width="281" />
+        <Button Content="..." Grid.Column="1" Grid.Row="7" Height="23" HorizontalAlignment="Left" Margin="301,6,0,0" Name="button2" VerticalAlignment="Top" Width="25" Click="button2_Click" />
+        <Button Content="取消" Height="23" HorizontalAlignment="Left" Margin="64,29,0,0" Name="button3" VerticalAlignment="Top" Width="75" Grid.Column="1" Grid.Row="8" Click="button3_Click" />
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="4,3,0,0" Name="textBlock4" Text="活动编号：" VerticalAlignment="Top" Grid.Row="5" Width="60" />
+        <TextBox Grid.Column="1" Height="23" HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Hidden" Margin="15,4,10,0" Name="txtPrjcode" VerticalAlignment="Top" VerticalContentAlignment="Center" Grid.Row="5" />
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="5,13,0,0" Name="textBlock6" Text="开始时间：" VerticalAlignment="Top" Grid.Row="3" Width="60" />
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="4,8,0,0" Name="textBlock7" Text="结束时间：" VerticalAlignment="Top" Grid.Row="4" Width="60" />
+        <TextBox Height="23" HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Hidden" Margin="15,9,10,0" Name="txtStartTime" VerticalAlignment="Top" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="3" />
+        <TextBox Height="23" HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Hidden" Margin="15,4,10,0" Name="txtEndTime" VerticalAlignment="Top" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="4" />
     </Grid>
 </Window>
